Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85719

SpinBox fails to validate the entry after it failed already

XMLWordPrintable

    • 97d2d271233246ed8a0d8930c9110603bf7b03bd (qt/qtquickcontrols2/dev) 454ca2f441ae3d400255471a7ebe850c6779ad0e (qt/qtquickcontrols2/5.15)

      Use a SpinBox like this below

      SpinBox {
      from: 2
      to: 98
      editable: true
      }
      

      1. By default, the value shown is 2
      2. Click inside and select the text(Ctrl+A)
      3. Enter value 99 and click on key Enter/Return
      4. We could see that that validator validates and the value changes to 98 as it is the max
      5. Again -> Click inside and select the text(Ctrl+A)
      6. Enter value 99 and click on key Enter/Return
      7. We could see that the new value is still 99 which means it is not validated.

      Attaching the sample application.

        1. qtbug85719.zip
          2 kB
          Shveta Mittal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes