tests/auto/controls/data/tst_spinbox.qml
@@ -686,4 +686,29 @@ TestCase {
         verify(control)
         compare(control.up.indicator.s, "this is the one");
     }
+
+    function test_valueEnterFromOutsideRange() {
+        // Check that changing from 2 to 99 goes to 98 then changing to 99 puts it back to 98
+        var control = createTemporaryObject(spinBox, testCase, {from: 2, to: 98, value: 2, editable: true})
+        verify(control)
+
+        control.forceActiveFocus()
+        verify(control.activeFocus)
+
+        keyClick(Qt.Key_Backspace)
+        keyClick(Qt.Key_Backspace)
+        keyClick(Qt.Key_9)
+        keyClick(Qt.Key_9)
+        keyClick(Qt.Key_Return)
+        compare(control.value, 98)
+        compare(control.displayText, "98")
+        compare(control.contentItem.text, "98")
+
+        keyClick(Qt.Key_Backspace)
+        keyClick(Qt.Key_9)
+        keyClick(Qt.Key_Return)
+        compare(control.value, 98)
+        compare(control.displayText, "98")
+        compare(control.contentItem.text, "98")
+    }
 }
